--- a/build.gradle
+++ b/build.gradle
@@ -31,9 +31,7 @@ ext {
 dependencies {
   compile('org.springframework.boot:spring-boot-starter-actuator')
   compile('org.springframework.boot:spring-boot-starter-web')
-  compile('org.springframework.boot:spring-boot-starter-data-jpa')
-  compile('org.springframework.boot:spring-boot-starter-data-rest')
-  compile group: 'org.hsqldb', name: 'hsqldb', version: '2.4.0'
+  compile('org.springframework.cloud:spring-cloud-starter-feign')
   testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
